load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test_suite", "rust_doc")

rust_library(
    name = "common",
    srcs = glob([
        "src/types/**/*.rs",
        "src/utils/**/*.rs",
    ]),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True),
    visibility = ["//visibility:public"],
)

rust_test_suite(
    name = "tests",
    srcs = glob([
        "tests/**",
    ]),
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    deps = ["//queng_common:common"],
)
