[package]
name = "common"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "common"
path = "src/lib.rs"


[dependencies]
# External crates
chrono = { workspace = true }
iggy = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
surrealdb = { workspace = true }
